Modified index and birthday-invite files to point to correct files and imgaes part-4

--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -2,7 +2,7 @@
 
 <h2>On 22 May</h2>
 
-<img src = "assets/images/birthday.gif" alt = "Birthday Gif"/>
+<img src = "MyPortfolio/assets/images/birthday.gif" alt = "Birthday Gif"/>
 
 <p style="font-size: 24px;">
     Join us to celebrate a special day, Avyaan turns another NINE on 22nd May!
@@ -20,7 +20,3 @@
 
 <h2>My wish location</h2>
 <a style="font-size: 24px;" href = "https://www.google.com/maps/place/GALAXY+VEGA,+Amrapali+Dream+Valley,+Greater+Noida,+Ithaira,+Uttar+Pradesh+201009/data=!4m2!3m1!1s0x390cee8f1bb2fca9:0x17cdd86db0425a53?sa=X&ved=1t:242&ictx=111"> Party_address</a>
-
-
-
-
