--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
         <ol>
             <li>
                 <h3>Project1:- Birthday Invite</h3>
-                <a href="MyPortfolio/public/birthday-invite.html"> 
-                    <img src = "MyPortfolio/assets/images/BirthDay.png"/></a><hr />
+                <a href="public/birthday-invite.html"> 
+                    <img src = "assets/images/BirthDay.png"/></a><hr />
             </li>
             <li>
                 <h3>Project2:- Best Books</h3>
-                <a href="MyPortfolio/public/Best_Books.html"> 
-                    <img src = "MyPortfolio/assets/images/Books.png"/></a><hr />
+                <a href="public/Best_Books.html"> 
+                    <img src = "assets/images/Books.png"/></a><hr />
             </li>
         </ol>
     </h2>
     <h2>Wanna Contact me for your next Website:-</h2>
     <h3>Click on below links</h3>
-    <a href="MyPortfolio/public/about.html">About Me</a>
-    <a href="MyPortfolio/public/contact.html">Contact Me</a>
+    <a href="public/about.html">About Me</a>
+    <a href="public/contact.html">Contact Me</a>
 
 </body>
 </html>
