--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -2,7 +2,7 @@
 
 <h2>On 22 May</h2>
 
-<img src = "public\birthday.gif" alt = "Birthday Gif"/>
+<img src = "public/birthday.gif" alt = "Birthday Gif"/>
 
 <p style="font-size: 24px;">
     Join us to celebrate a special day, Avyaan turns another NINE on 22nd May!
